[gd_scene load_steps=4 format=3 uid="uid://cqk4uagr1dfqu"]

[ext_resource type="Script" path="res://scenes/ui.gd" id="1_4y8v8"]
[ext_resource type="FontFile" uid="uid://ch103gi2tob72" path="res://assets/font/andina.ttf" id="1_ak3uv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_01k40"]
bg_color = Color(1, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_4y8v8")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Points" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_ak3uv")
theme_override_font_sizes/font_size = 30
text = "SCORE = 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointChange" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ak3uv")
theme_override_font_sizes/font_size = 15

[node name="Lives" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="GameOver" type="CenterContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GameOver"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="MarginContainer/GameOver/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ak3uv")
theme_override_font_sizes/font_size = 60
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverButton" type="Button" parent="MarginContainer/GameOver/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ak3uv")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_01k40")
text = "restart"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="Chain" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_ak3uv")
theme_override_font_sizes/font_size = 30
text = "CHAIN = 0"

[node name="Multiplier" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ak3uv")
theme_override_font_sizes/font_size = 30
text = "MULTI = X1"

[connection signal="pressed" from="MarginContainer/GameOver/VBoxContainer/GameOverButton" to="." method="_on_button_pressed"]
